# napari-label-interpolator

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_label_interpolator/: _version.py  interpolator.py  napari.yaml
src/napari_label_interpolator/_tests/: test_widget.py
