[metadata]
name = napari-label-interpolator

description = A napari plugin to interpolate any number of (n-1)d-labels across a single dimension.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brisvag/napari-label-interpolator
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/brisvag/napari-label-interpolator/issues
    Documentation = https://github.com/brisvag/napari-label-interpolator#README.md
    Source Code = https://github.com/brisvag/napari-label-interpolator
    User Support = https://github.com/brisvag/napari-label-interpolator/issues

[options]
packages = find:
install_requires =
    magicgui
    napari

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-label-interpolator = napari_label_interpolator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
